# AI-ehs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE2.mdbak  Makefile  PROJECT_OVERVIEW.md  README.md  RETRO-2026-04-14.md  TODOS.md  docker-compose.yml  package.json  tsconfig.json  测试指南.md  直投 - 最终版 - 回答 1.md  直投 - 最终版 - 回答 2.md  直投 - 最终版 - 回答 3.md  直投 - 最终版 - 回答 4.md  直投 - 最终版 - 回答 5.md  直投 - 最终版.md
.claude/: code-review-task.md
.claude/hooks/: README.md
.claude/memory/: MEMORY.md  feedback_workflow_order.md
.github/workflows/: ci.yml  release.yml
.gstack/qa-reports/: qa-report-2026-04-14.md
.gstack/security-reports/: cso-2026-04-17.md
.sixth/: 过程记录
admin-console/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js
admin-console/src/: App.tsx  index.css
apps/: README.md
apps/ehs-ai/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
apps/ehs-ai/docs/: api-examples.md
apps/ehs-ai/docs/api/: openapi.yaml
apps/ehs-ai/src/: __init__.py  container.py  grpc_server.py
apps/ehs-ai/src/adapters/: __init__.py
apps/ehs-ai/src/adapters/primary/: __init__.py  auth.py  rest_api.py
apps/ehs-ai/src/adapters/secondary/: __init__.py  alert_repository.py  elasticsearch.py  milvus.py  minio.py  pgvector_adapter.py
apps/ehs-ai/src/core/: __init__.py  config.py  graph_rag.py
apps/ehs-ai/src/core/agents/: __init__.py  output_validators.py  risk_agent.py  search_agent.py  workflow.py
apps/ehs-ai/src/core/graph_rag/: __init__.py  core.py  knowledge_graph.py
apps/ehs-ai/src/core/llm/: __init__.py  base.py  mock.py  ollama.py  openai.py
apps/ehs-ai/src/infrastructure/grpc/proto/: ehs_pb2.py  ehs_pb2_grpc.py
apps/ehs-ai/src/monitoring/: README.md  __init__.py  metrics.py  prometheus.py
apps/ehs-ai/src/ports/: __init__.py
apps/ehs-ai/src/ports/secondary/: __init__.py  storage.py
apps/ehs-ai/src/proto/: ehs.proto
apps/ehs-ai/tests/: __init__.py  mocks.py  test_agents.py  test_alert_repository.py  test_grpc_server.py  test_hexagonal.py  test_monitoring.py
docs/: CODING_CONVENTIONS.md  Claude_Code_深度使用指南_01_微信飞书远程操控.md  Claude_Code_深度使用指南_02_AI 开发者专用.md  Claude_Code_深度使用指南_03_AI 自媒体一人公司.md  GraphRAG说明.md  getting-started.md  目录结构整理记录.md  面试演示指南.md
infra/: docker-compose.yml  prometheus.yml
python-ai-service/: .env.example  .env.production  Dockerfile  README.md  main_simple.py  requirements.txt
scripts/: demo.sh  fine_tune.py  pull_model.sh  run-tests.sh  run_performance_test.sh  seed_data.py  setup.sh  start.sh
src/: __init__.py
tests/: test_data_prep.py  test_docker.py  test_embedding_model.py  test_grpc_proto.py  test_helm.py  test_instruction_tuning.py  test_monorepo.py  test_risk_classifier.py
(+204 files in other folders)
