[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ehs-ai"
version = "2.0.0"
description = "EHS 智能安保决策中台 - AI 服务（六边形架构）"
authors = ["EHS Team <ehs@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# AI/LLM
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langchain-openai = "^0.0.8"

# Vector Database
pymilvus = "^2.4.0"

# Elasticsearch
elasticsearch = "^8.12.0"

# Reranker
sentence-transformers = "^2.3.0"

# PyTorch
torch = "^2.2.0"
torchvision = "^0.17.0"

# gRPC
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"

# HTTP Client
httpx = "^0.27.0"

# Logging
structlog = "^24.1.0"
python-json-logger = "^2.0.7"

# Observability
langfuse = "^2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
docker = "^7.0.0"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
